<resources>
    <string name="app_name">FarmerFriendsPro</string>
    <string name="BLACK_SOIL">BLACK SOIL</string>
    <string name="LATERIC_SOIL">LATERIC SOIL</string>
    <string name="ALLUVIAL_SOIL">ALLUVIAL SOIL</string>
    <string name="RED_SOIL">RED SOIL</string>
    <string name="SANDY_SOIL">SANDY SOIL</string>
    <string name="Choose_Category_Of_Soil">Choose Category Of Soil</string>
    <string name="COTTON">COTTON</string>
    <string name="COFFEE">COFFEE</string>
    <string name="WHEAT">WHEAT</string>
    <string name="JUTE">JUTE</string>
    <string name="CHILLIES">CHILLIES</string>
    <string name="CARROT">CARROT</string>
    <string name="RICE">RICE</string>
    <string name="SUGARCANE">SUGARCANE</string>
    <string name="TOBACCO">TOBACCO</string>
    <string name="GROUND_NUT">GROUND NUT</string>
    <string name="TOMATO">TOMATO</string>
    <string name="RAINFALL">RAINFALL</string>
    <string name="SEASON">SEASON</string>
    <string name="TEMPERATURE">TEMPERATURE</string>
    <string name="HARVESTING_TIME">HARVESTING TIME</string>
    <string name="INVESTMENT">INVESTMENT</string>
    <string name="PEST_EFFECT">PEST EFFECT</string>
    <string name="PESTICIDES">PESTICIDES</string>
    <string name="PESTATTACKS">PEST ATTACKS</string>
    <string name="degree">degree</string>
    <string name="Days">Days</string>
    <string name="per_acre">per acre</string>
    <string name="Months">Months</string>
    <string name="per_quintal">per quintal</string>
    <string name="per_kg">per kg</string>
    <string name="Weeks">Weeks</string>
    <string name="SPRING_SEASON">SPRING_SEASON</string>
    <string name="WARM_AND_HUMID_CLIMATE">WARM AND HUMID CLIMATE</string>
    <string name="TROPICAL_PLANT">TROPICAL_PLANT</string>
    <string name="KHARIF_CROP">KHARIF CROP</string>
    <string name="WARM">WARM</string>
    <string name="RABI_CROP">RABI CROP</string>
    <string name="COMMERCIAL_CROP">COMMERCIAL CRO</string>
    <string name="cm">cm</string>
    <string name="Rs_2000">Rs:2000</string>
    <string name="Alternaria_leaf_blight">Alternaria leaf blight</string>
    <string name="Ramban_chloropyriphos">Ramban chloropyriphos</string>
    <string name="Capsaici">Capsaici</string>
    <string name="HarvestOregano_Pesticides">HarvestOregano Pesticides</string>
    <string name="Rs_236">Rs:236</string>
    <string name="Borer_Beetle">Borer Beetle</string>
    <string name="Peptech_Biosciences">Peptech Biosciences</string>
    <string name="Rs_350">Rs:350</string>
    <string name="PinkBollWorm">PinkBollWorm</string>
    <string name="AldiCrab">AldiCrab</string>
    <string name="Rs_2200">Rs:2200</string>
    <string name="SpiderMites">SpiderMites</string>
    <string name="Delegate_Spinrtoram">Delegate_Spinrtoram</string>
    <string name="Rs_65">Rs:65</string>
    <string name="CharcoalRot">CharcoalRot</string>
    <string name="Ramban_Choloropyriphos">Ramban Choloropyriphos</string>
    <string name="a35_gunny_bags">35 gunny bags</string>
    <string name="RiceBlast">RiceBlast</string>
    <string name="Lambda_cyhalothrin">Lambda cyhalothrin</string>
    <string name="Rs_325">Rs:325</string>
    <string name="ShootBarer">ShootBarer</string>
    <string name="Imida_imidacloprid">Imida imidacloprid</string>
    <string name="Rs_4715">Rs:4715</string>
    <string name="Rove_Beetle">Rove Beetle</string>
    <string name="Methyl_Bromide">Methyl Bromide</string>
    <string name="Rs_1258">Rs:1258</string>
    <string name="Barley_Yellow_Dwarf">Barley Yellow Dwarf</string>
    <string name="Organophosphate">Organophosphate</string>
</resources>
