<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarrotActivity">

    <TextView
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RED_SOIL"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="50dp"
        android:textColor="#000000"
        />

    <TextView
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="110dp"
        android:text="@string/RICE"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SEASON"
        android:layout_marginLeft="20dp"
        android:textSize="15dp"
        android:layout_marginTop="165dp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:layout_marginLeft="151dp"
        android:textSize="15dp"
        android:layout_marginTop="165dp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/KHARIF_CROP"
        android:layout_marginLeft="159dp"
        android:textSize="15dp"
        android:layout_marginTop="165dp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TEMPERATURE"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="190dp"
        android:textSize="15dp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:layout_marginLeft="151dp"
        android:textSize="15dp"
        android:layout_marginTop="190dp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20-40"
        android:layout_marginLeft="159dp"
        android:layout_marginTop="190dp"
        android:textSize="15dp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="190dp"
        android:textSize="15dp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/ten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RAINFALL"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="215dp"
        android:textSize="15dp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/eleven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:layout_marginLeft="151dp"
        android:textSize="15dp"
        android:layout_marginTop="215dp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/twelve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="60-90"
        android:layout_marginLeft="159dp"
        android:layout_marginTop="215dp"
        android:textSize="15dp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/thirteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cm"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="215dp"
        android:textSize="15dp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/fourteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HARVESTING_TIME"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="240dp"
        android:textSize="15dp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/fifteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:layout_marginLeft="151dp"
        android:textSize="15dp"
        android:layout_marginTop="240dp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/sixteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="90-110"
        android:layout_marginLeft="159dp"
        android:layout_marginTop="240dp"
        android:textSize="15dp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/seventeen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Days"
        android:layout_marginLeft="205dp"
        android:layout_marginTop="240dp"
        android:textSize="15dp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/eighteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/INVESTMENT"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="265dp"
        android:textSize="15dp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/nineteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:layout_marginLeft="151dp"
        android:textSize="15dp"
        android:layout_marginTop="265dp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/twenty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a35_gunny_bags"
        android:layout_marginLeft="159dp"
        android:layout_marginTop="265dp"
        android:textSize="15dp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/twentyone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/per_acre"
        android:layout_marginLeft="270dp"
        android:layout_marginTop="265dp"
        android:textSize="15dp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/twentytwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PEST_EFFECT"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="295dp"
        android:textSize="15dp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/twentythree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:layout_marginLeft="151dp"
        android:textSize="15dp"
        android:layout_marginTop="295dp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/twentyfour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RiceBlast"
        android:layout_marginLeft="158dp"
        android:layout_marginTop="295dp"
        android:textSize="15dp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/twentyfive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PESTICIDES"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="320dp"
        android:textSize="15dp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/twentysix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:layout_marginLeft="151dp"
        android:textSize="15dp"
        android:layout_marginTop="320dp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/twentyseven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lambda_cyhalothrin"
        android:layout_marginLeft="158dp"
        android:layout_marginTop="320dp"
        android:textSize="15dp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/twentyeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PESTATTACKS"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="345dp"
        android:textSize="15dp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/twentynine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:layout_marginLeft="151dp"
        android:textSize="15dp"
        android:layout_marginTop="345dp"
        android:textColor="#000000"
        />
    <ImageView
        android:id="@+id/thirty"
        android:layout_width="382dp"
        android:layout_height="158dp"
        android:layout_below="@+id/nine"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="165dp"
        android:src="@drawable/ricep"
        />

</RelativeLayout>