<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b2"
    tools:context=".HomeActivity">
    <RelativeLayout
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select the language"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="0dp"
            />
        <ImageButton
            android:id="@+id/changMyLang"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo"
            android:layout_below="@id/x"
            />
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Choose_Category_Of_Soil"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/changMyLang"
            />
        <RadioGroup
            android:id="@+id/soilselection1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp">

            <RadioButton
                android:id="@+id/alluvial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ALLUVIAL_SOIL"
                android:textColor="#FFFFFF"
                android:textSize="25dp"
                android:textStyle="bold"
                />
            <RadioButton
                android:id="@+id/lateric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LATERIC_SOIL"
                android:textColor="#FFFFFF"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                />
            <RadioButton
                android:id="@+id/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RED_SOIL"
                android:textColor="#FFFFFF"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                />
            <RadioButton
                android:id="@+id/sandy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SANDY_SOIL"
                android:textColor="#FFFFFF"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                />
            <RadioButton
                android:id="@+id/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BLACK_SOIL"
                android:textColor="#FFFFFF"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                />


        </RadioGroup>
        <ImageButton
            android:id="@+id/Groundnut"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/soilselection1"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:onClick="groundnut"
            android:src="@drawable/groundnut" />

        <ImageButton
            android:id="@+id/jute"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/Groundnut"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="19dp"
            android:src="@drawable/jute"
            android:onClick="jute"/>
        <ImageButton
            android:id="@+id/scane"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/jute"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="19dp"
            android:src="@drawable/scane"
            android:onClick="sugar"/>
        <ImageButton
            android:id="@+id/tobacco"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/scane"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="19dp"
            android:src="@drawable/tobacco"
            android:onClick="tobaco"/>
        <ImageButton
            android:id="@+id/coffee"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/tobacco"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="19dp"
            android:src="@drawable/coffee"
            android:onClick="coffee"/>
        <ImageButton
            android:id="@+id/rice"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/coffee"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="19dp"
            android:src="@drawable/rice"
            android:onClick="rice"/>
        <ImageButton
            android:id="@+id/wheat"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/rice"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="19dp"
            android:src="@drawable/wheat"
            android:onClick="wheat"/>
        <ImageButton
            android:id="@+id/carrot"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/wheat"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="19dp"
            android:src="@drawable/carrot"
            android:onClick="carrot"/>
        <ImageButton
            android:id="@+id/tomato"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/carrot"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="19dp"
            android:src="@drawable/tomato"
            android:onClick="tomato"/>
        <ImageButton
            android:id="@+id/cotton"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/tomato"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="19dp"
            android:src="@drawable/cotton"
            android:onClick="cotton"/>
        <ImageButton
            android:id="@+id/chilli"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/cotton"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="19dp"
            android:src="@drawable/chilli"
            android:onClick="chilli"/>

    </RelativeLayout>


</ScrollView>

